# iceberg-demo2

./: docker-compose.yml  iceberg.ipynb  pyproject.toml  requirements.txt
dagster_project/: __init__.py  assets.py  io_managers.py
trino/: iceberg.properties
